playlist db added in a listview
get data from db to listview

--- a/res/layout/oynatma_listesi_al.xml
+++ b/res/layout/oynatma_listesi_al.xml
@@ -11,4 +11,10 @@
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <ListView
+        android:id="@+id/lvKulGelen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+
 </LinearLayout>
