--- a/res/layout/kayit_ol.xml
+++ b/res/layout/kayit_ol.xml
@@ -7,8 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" 
-
-    android:background="#ffffff">
+    android:background="@drawable/kpss1">
 
     <LinearLayout 
         android:orientation="vertical"
