--- a/res/layout/giris_yap.xml
+++ b/res/layout/giris_yap.xml
@@ -7,7 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" 
-    android:background="@drawable/kpss1">
+
+    android:background="#ffffff">
 
     <LinearLayout 
         android:orientation="vertical"
