--- a/res/layout/video_oynat.xml
+++ b/res/layout/video_oynat.xml
@@ -7,7 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/kpss5"
     tools:context=".Giris" >
 
     <fragment
@@ -16,14 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
  
-    <ScrollView
+    <ScrollView 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <LinearLayout
+        android:layout_height="match_parent">
+        <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
            
             <TextView 
                 android:id="@+id/videolog"
@@ -49,7 +48,6 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/buttonshape"
                     android:text="Yorum Yap" />
 
                 <RatingBar
@@ -57,15 +55,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+
+            <ListView
+                android:id="@+id/listView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+            </ListView>
             
         </LinearLayout>
     </ScrollView>
-
-    <ListView
-        android:id="@+id/lvYorum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none" >
-    </ListView>
     
 </LinearLayout>
