--- a/res/layout/oynatma_listeni_ekle.xml
+++ b/res/layout/oynatma_listeni_ekle.xml
@@ -1,44 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@drawable/kpss5"
+     >
 
-    <TextView
-        android:id="@+id/txtHos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOŞ GELDİNİZ"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Spinner
-        android:id="@+id/spinner1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/KursSec"
-        android:prompt="@string/kategori_sec" />
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:orientation="vertical" >
 
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-          />
+        <TextView
+            android:id="@+id/txtHos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="HOŞ GELDİNİZ"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-   
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Playlist ID gir"
-        android:ems="10" >
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/KursSec"
+            android:prompt="@string/kategori_sec" />
 
-        <requestFocus />
-    </EditText>
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btnEkle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Playlist Oluştur" />
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Playlist ID gir" >
 
-</LinearLayout>
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/btnEkle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/buttonshape"
+            android:text="Playlist Oluştur" />
+    </LinearLayout>
+
+</RelativeLayout>
